k8s/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: api-gateway:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
          startupProbe :
            tcpSocket :
              port : 8083
            initialDelaySeconds : 10
            periodSeconds : 10
            failureThreshold : 18
          livenessProbe :
            tcpSocket :
              port : 8083
            periodSeconds : 10
          readinessProbe :
            tcpSocket :
              port : 8083
            periodSeconds : 5
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  selector:
    app: api-gateway
  ports:
    - port: 8083
      targetPort: 8083
