k8s/auth-postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: auth-postgres
spec:
  serviceName: auth-postgres
  replicas: 1
  selector:
    matchLabels:
      app: auth-postgres
  template:
    metadata:
      labels:
        app: auth-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:17-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: auth-pg-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: auth-pg-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: auth-postgres
spec:
  clusterIP: None
  selector:
    app: auth-postgres
  ports:
    - port: 5432
      targetPort: 5432
