k8s/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  labels:
    app: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: auth-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          startupProbe :
            tcpSocket :
              port : 8081
            initialDelaySeconds : 10
            periodSeconds : 10
            failureThreshold : 18
          livenessProbe :
            tcpSocket :
              port : 8081
            periodSeconds : 10
          readinessProbe :
            tcpSocket :
              port : 8081
            periodSeconds : 5
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - port: 8081
      targetPort: 8081
