k8s/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  labels:
    app: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: order-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
          startupProbe :
            tcpSocket :
              port : 8082
            initialDelaySeconds : 10
            periodSeconds : 10
            failureThreshold : 18
          livenessProbe :
            tcpSocket :
              port : 8082
            periodSeconds : 10
          readinessProbe :
            tcpSocket :
              port : 8082
            periodSeconds : 5
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-service
  ports:
    - port: 8082
      targetPort: 8082
