k8s/payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  labels:
    app: payment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - name: payment-service
          image: payment-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8084
          startupProbe :
            tcpSocket :
              port : 8084
            initialDelaySeconds : 10
            periodSeconds : 10
            failureThreshold : 18
          livenessProbe :
            tcpSocket :
              port : 8084
            periodSeconds : 10
          readinessProbe :
            tcpSocket :
              port : 8084
            periodSeconds : 5
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  selector:
    app: payment-service
  ports:
    - port: 8084
      targetPort: 8084
