k8s/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: user-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          startupProbe :
            tcpSocket :
              port : 8080
            initialDelaySeconds : 10
            periodSeconds : 10
            failureThreshold : 18
          livenessProbe :
            tcpSocket :
              port : 8080
            periodSeconds : 10
          readinessProbe :
            tcpSocket :
              port : 8080
            periodSeconds : 5
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
    - port: 8080
      targetPort: 8080
